[gd_scene load_steps=25 format=2]

[ext_resource path="res://Action_RPG_Resources/Enemies/Bat.gd" type="Script" id=1]
[ext_resource path="res://Action_RPG_Resources/Boxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Action_RPG_Resources/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Action_RPG_Resources/Enemies/Bat.png" type="Texture" id=4]
[ext_resource path="res://Action_RPG_Resources/Shadows/SmallShadow.png" type="Texture" id=5]
[ext_resource path="res://Action_RPG_Resources/Boxes/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Action_RPG_Resources/Boxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Action_RPG_Resources/Boxes/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Action_RPG_Resources/WhiteColor.shader" type="Shader" id=9]
[ext_resource path="res://Action_RPG_Resources/Enemies/WanderController.tscn" type="PackedScene" id=10]

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 3.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=10]
radius = 5.75068
height = 4.0

[sub_resource type="CircleShape2D" id=11]
radius = 79.0759

[sub_resource type="CircleShape2D" id=12]
radius = 5.45314

[sub_resource type="CircleShape2D" id=13]
radius = 5.13842

[sub_resource type="Animation" id=14]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=15]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 9 )
position = Vector2( -1, 0 )
frames = SubResource( 21 )
animation = "Fly"
frame = 4
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 10 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
self_modulate = Color( 1, 1, 1, 0.14902 )
shape = SubResource( 11 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 12 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 13 )

[node name="WanderController" parent="." instance=ExtResource( 10 )]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 14 )
anims/Stop = SubResource( 15 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
